initialise for linter

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">,
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>div-container</title>
+
+    <style>
+        body {
+            background-color: #d5d5d5e6
+        }
+
+        button {
+            border: none;
+            margin: 3px;
+        }
+        #table{
+            align-items: center;
+            margin: 2rem 8rem;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="table"></div>
+    <script src="index.js"></script>
 </body>
 </html>
